test_case/rust-lang_rust/45080_335495118.rs
diff
 error[E0308]: mismatched types
-  --> $DIR/block-must-not-have-result-while.rs:13:9
+  --> C:/projects/rust/src/test/ui/block-result/block-must-not-have-result-while.rs:13:9
    |
 13 |         true //~  ERROR mismatched types
    |         ^^^^ expected (), found bool
    |
    = note: expected type `()`
               found type `bool`
 
 error: aborting due to previous error
